--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-
-
-
     <div class="container">
         <div id="creatormenu" style="display: block" class="row">
             <div id="creator-container" class="col s5">
@@ -29,23 +26,6 @@
                 <div id="page_myhorses" class="row">
                     <div class="scroll-container">
                         <ul class="collapsible">
-                             <!-- <li>
-                                <div id="heads" class="collapsible-header col s12 panel" style="background-color: transparent; border: 0;">
-                                    <div class="col s12 panel-title">
-                                        <h6 class="grey-text">CAVALO1</h6>
-                                    </div>
-                                </div>
-                                <div class="collapsible-body col s12 panel item">
-                                    <div class="col s6 panel-col item">
-                                        <h6 class="grey-text title">Escolher</h6>
-                                    </div>
-                                    <div class="col s1 offset-s4 panel-col">
-                                        <button class="button-left col s4 waves-effect waves-light btn">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </li>  -->
                         </ul>
                     </div>
                 </div>
@@ -54,47 +34,8 @@
                     <div class="scroll-container">
                         <ul class="collapsible">
                             <li> 
-                                <!-- <div id="heads" class="collapsible-header col s12 panel " style="background-color: transparent; border: 0;">
-                                    <div class="col s12 panel-title">
-                                        <h6 class="grey-text" style="color:white;">CAVALOS DE GUERRA</h6>
-                                    </div>
-                                </div>
-                                <div class="collapsible-body item-bg">
-                                     <div id="${_}" onhover="loadHorse(this)" class="col s12 panel item">
-
-                                <div class="col s6 panel-col item">
-                                    <h6 class="grey-text title" style="color:white;">${HorseName}</h6>
-                                </div>          
-
-                                <div class="buy-buttons">                                       
-                                    <button class="btn-small">                                                
-                                        <img src="img/gold.png"><span class="horse-price">${priceGold}</span>
-                                    </button>                                          
-                                    <button class="btn-small">
-                                        <img src="img/money.png"><span class="horse-price">${priceDolar}</span>
-                                    </button>
-                                </div>
-                                
-                            </div>
-                                </div> -->
                             </li>
                         </ul>
-                        <!-- <div id="liprofundidade" class="col s12 panel ">
-                            <div class="col s12 panel item">
-                                <div class="col s6 panel-col item">
-                                    <h6 class="grey-text title"> Profundidade</h6>
-                                </div>
-                                <div class="col s6 panel-col">
-                                    <button class="button-leftstep col s4 waves-effect waves-light btn">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </button>
-                                    <input class="input-number col s4" disabled type="number" min="-1" value="0.0" max="1" step=".0" disabled />
-                                    <button class="button-rightstep col s4 waves-effect waves-light btn">
-                                        <i class="fas fa-chevron-right"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
 
@@ -102,7 +43,7 @@
                     <div class="scroll-container">
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Saddle Cloth 0/65</h6>
+                                <h6 class="grey-text title">Saddlecloths 0/65</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -117,7 +58,7 @@
                         
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Saddle 0/65</h6>
+                                <h6 class="grey-text title">Saddles 0/136</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4  btn">
@@ -131,7 +72,7 @@
                         </div>
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Stirrups 0/65</h6>
+                                <h6 class="grey-text title">Stirrups 0/11</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -145,7 +86,7 @@
                         </div>
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">AcsHorn 0/14</h6>
+                                <h6 class="grey-text title">AcsHorns 0/14</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -159,7 +100,7 @@
                         </div>
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Bags 0/10</h6>
+                                <h6 class="grey-text title">Bags 0/20</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -173,7 +114,7 @@
                         </div>
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Ponytail 0/84</h6>
+                                <h6 class="grey-text title">Tails 0/85</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -187,7 +128,7 @@
                         </div>
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Manes 0/101</h6>
+                                <h6 class="grey-text title">Manes 0/102</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -202,7 +143,7 @@
                         </div>   
                         <div class="col s12 panel item">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">AcsLuggage 0/29</h6>
+                                <h6 class="grey-text title">Bedrolls 0/30</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
