added rotate button

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
                 </div>
                 
                 <div id="button_menu" class="row">
-                    <button id="button-myhorses" data-target="page_myhorses" class="menu-selectb active">My horses</button>
+                    <button id="button-myhorses" data-target="page_myhorses" class="menu-selectb active">My Horses</button>
                     <button id="button-shop" data-target="page_shop" class="menu-selectb">Store</button>
                     <button id="button-customization" data-target="page_customization" class="menu-selectb">Customization</button>
                 </div>
@@ -157,8 +157,9 @@
                         </div>                         
                     </div>                   
                 </div>
-                <div class="confirm">
-                    <button id="confirm" class="confirm-button btn" onclick="confirm()"><span>Confirm</span></button>
+                <div class="buttons">
+                    <button id="confirm" class="action-button" onclick="confirm()"><span>Confirm</span></button>
+                    <button id="rotate" class="action-button" onclick="rotate()"><span>Rotate</span></button>
                 </div>
             </div>
         </div>
