--- a/html/index.html
+++ b/html/index.html
@@ -33,8 +33,7 @@
                 <div id="page_shop" class="row" style="display: none;">
                     <div class="scroll-container">
                         <ul class="collapsible">
-                            <li> 
-                            </li>
+                            <li></li>
                         </ul>
                     </div>
                 </div>
@@ -158,11 +157,11 @@
                     </div>                   
                 </div>
                 <div class="buttons">
-                    <button id="confirm" class="action-button" onclick="confirm()"><span>Confirm</span></button>
+                    <button id="confirm" class="action-button" onclick="confirm()"><span>Exit</span></button>
                     <button id="rotate" class="action-button" onclick="rotate()"><span>Rotate</span></button>
                 </div>
             </div>
         </div>
     </div>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js"></script>
 </body>
