--- a/html/index.html
+++ b/html/index.html
@@ -40,115 +40,115 @@
 
                 <div id="page_customization" class="row" style="display:none">
                     <div class="scroll-container">
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Saddlecloths 0/65</h6>
+                                <h6 class="grey-text title-cust">Saddlecloths 0/65</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Saddlecloths" class="input-number col s4" type="number" value="0" min="0" max="65" />
+                                <input id="Saddlecloths" class="input-number col s4" type="number" value="0" readonly min="0" max="65" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                         </div>
                         
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Saddles 0/136</h6>
+                                <h6 class="grey-text title-cust">Saddles 0/136</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4  btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Saddles" class="input-number col s4" type="number" value="0" min="0" max="136" />
+                                <input id="Saddles" class="input-number col s4" type="number" value="0" readonly min="0" max="136" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Stirrups 0/11</h6>
+                                <h6 class="grey-text title-cust">Stirrups 0/11</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Stirrups" class="input-number col s4" type="number" value="0" min="0" max="11" />
+                                <input id="Stirrups" class="input-number col s4" type="number" value="0" readonly min="0" max="11" />
                                 <button class="button-right col s4  btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">AcsHorns 0/14</h6>
+                                <h6 class="grey-text title-cust">AcsHorns 0/14</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="AcsHorn" class="input-number col s4" type="number" value="0" min="0" max="14" />
+                                <input id="AcsHorn" class="input-number col s4" type="number" value="0" readonly min="0" max="14" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Bags 0/20</h6>
+                                <h6 class="grey-text title-cust">Bags 0/20</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Bags" class="input-number col s4" type="number" value="0" min="0" max="20" />
+                                <input id="Bags" class="input-number col s4" type="number" value="0" readonly min="0" max="20" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Tails 0/85</h6>
+                                <h6 class="grey-text title-cust">Tails 0/85</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="HorseTails" class="input-number col s4" type="number" value="0" min="0" max="85" />
+                                <input id="HorseTails" class="input-number col s4" type="number" value="0" readonly min="0" max="85" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Manes 0/102</h6>
+                                <h6 class="grey-text title-cust">Manes 0/102</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Manes" class="input-number col s4" type="number" value="0" min="0" max="102" />
+                                <input id="Manes" class="input-number col s4" type="number" value="0" readonly min="0" max="102" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>
                             
                         </div>   
-                        <div class="col s12 panel item">
+                        <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title">Bedrolls 0/30</h6>
+                                <h6 class="grey-text title-cust">Bedrolls 0/30</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="AcsLuggage" class="input-number col s4" type="number" value="0" min="0" max="30" />
+                                <input id="AcsLuggage" class="input-number col s4" type="number" value="0" readonly min="0" max="30" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
