--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
 
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Saddlecloths 0/65</h6>
+                                <h6 class="grey-text-cust title">Saddlecloths 0/65</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -58,7 +58,7 @@
                         
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Saddles 0/136</h6>
+                                <h6 class="grey-text-cust title">Saddles 0/136</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4  btn">
@@ -73,7 +73,7 @@
 
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Stirrups 0/11</h6>
+                                <h6 class="grey-text-cust title">Stirrups 0/11</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -88,7 +88,7 @@
 
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">AcsHorns 0/14</h6>
+                                <h6 class="grey-text-cust title">Saddle Horns 0/14</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -103,7 +103,7 @@
 
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Bags 0/20</h6>
+                                <h6 class="grey-text-cust title">Bags 0/20</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -118,7 +118,22 @@
 
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Tails 0/85</h6>
+                                <h6 class="grey-text-cust title">Bedrolls 0/30</h6>
+                            </div>
+                            <div class="col s6 panel-col">
+                                <button class="button-left col s4 btn">
+                                    <i class="fas fa-chevron-left"></i>
+                                </button>
+                                <input id="AcsLuggage" class="input-number col s4" type="number" value="0" readonly min="0" max="30" />
+                                <button class="button-right col s4 btn">
+                                    <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>                            
+                        </div>   
+
+                        <div class="col s12 panel-cust">
+                            <div class="col s6 panel-col item">
+                                <h6 class="grey-text-cust title">Tails 0/85</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -133,7 +148,7 @@
 
                         <div class="col s12 panel-cust">
                             <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Manes 0/102</h6>
+                                <h6 class="grey-text-cust title">Manes 0/102</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
@@ -145,21 +160,7 @@
                                 </button>
                             </div>
                         </div>
-
-                        <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text title-cust">Bedrolls 0/30</h6>
-                            </div>
-                            <div class="col s6 panel-col">
-                                <button class="button-left col s4 btn">
-                                    <i class="fas fa-chevron-left"></i>
-                                </button>
-                                <input id="AcsLuggage" class="input-number col s4" type="number" value="0" readonly min="0" max="30" />
-                                <button class="button-right col s4 btn">
-                                    <i class="fas fa-chevron-right"></i>
-                                </button>
-                            </div>                            
-                        </div>                         
+                      
                     </div>                   
                 </div>
 
