--- a/html/index.html
+++ b/html/index.html
@@ -18,9 +18,9 @@
                 </div>
 
                 <div id="button_menu" class="row">
-                    <button id="button-myhorses" data-target="page_myhorses" class="menu-selectb active">My Horses</button>
-                    <button id="button-shop" data-target="page_shop" class="menu-selectb">Store</button>
-                    <button id="button-customization" data-target="page_customization" class="menu-selectb">Customization</button>
+                    <button id="button-myhorses" data-target="page_myhorses" class="menu-selectb active">Stable</button>
+                    <button id="button-shop" data-target="page_shop" class="menu-selectb">Trader</button>
+                    <button id="button-customization" data-target="page_customization" class="menu-selectb">Tack Shop</button>
                 </div>
 
                 <div id="page_myhorses" class="row">
@@ -42,14 +42,17 @@
                     <div class="scroll-container">
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Saddlecloths 0/65</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Saddlecloths</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Saddlecloths" class="input-number col s4" type="number" value="0" readonly min="0" max="65" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/65</h6>
+                                </div>
+                                <input id="Saddlecloths" class="input-number col s4" type="hidden" value="0" readonly min="0" max="65" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -57,14 +60,17 @@
                         </div>
                         
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Saddles 0/136</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Saddles</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4  btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Saddles" class="input-number col s4" type="number" value="0" readonly min="0" max="136" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/136</h6>
+                                </div>
+                                <input id="Saddles" class="input-number col s4" type="hidden" value="0" readonly min="0" max="136" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -72,14 +78,17 @@
                         </div>
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Stirrups 0/11</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Stirrups</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Stirrups" class="input-number col s4" type="number" value="0" readonly min="0" max="11" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/11</h6>
+                                </div>
+                                <input id="Stirrups" class="input-number col s4" type="hidden" value="0" readonly min="0" max="11" />
                                 <button class="button-right col s4  btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -87,14 +96,17 @@
                         </div>
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Saddle Horns 0/14</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Saddle Horns</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="AcsHorn" class="input-number col s4" type="number" value="0" readonly min="0" max="14" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/14</h6>
+                                </div>
+                                <input id="AcsHorn" class="input-number col s4" type="hidden" value="0" readonly min="0" max="14" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -102,14 +114,17 @@
                         </div>
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Bags 0/20</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Saddlebags</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Bags" class="input-number col s4" type="number" value="0" readonly min="0" max="20" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/20</h6>
+                                </div>
+                                <input id="Bags" class="input-number col s4" type="hidden" value="0" readonly min="0" max="20" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -117,29 +132,35 @@
                         </div>
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Bedrolls 0/30</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Bedrolls</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="AcsLuggage" class="input-number col s4" type="number" value="0" readonly min="0" max="30" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/30</h6>
+                                </div>
+                                <input id="AcsLuggage" class="input-number col s4" type="hidden" value="0" readonly min="0" max="30" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
                             </div>                            
-                        </div>   
+                        </div>
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Tails 0/85</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Manes</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="HorseTails" class="input-number col s4" type="number" value="0" readonly min="0" max="85" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/102</h6>
+                                </div>
+                                <input id="Manes" class="input-number col s4" type="hidden" value="0" readonly min="0" max="102" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -147,14 +168,17 @@
                         </div>
 
                         <div class="col s12 panel-cust">
-                            <div class="col s6 panel-col item">
-                                <h6 class="grey-text-cust title">Manes 0/102</h6>
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Tails</h6>
                             </div>
                             <div class="col s6 panel-col">
                                 <button class="button-left col s4 btn">
                                     <i class="fas fa-chevron-left"></i>
                                 </button>
-                                <input id="Manes" class="input-number col s4" type="number" value="0" readonly min="0" max="102" />
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/85</h6>
+                                </div>
+                                <input id="HorseTails" class="input-number col s4" type="hidden" value="0" readonly min="0" max="85" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -165,7 +189,7 @@
                 </div>
 
                 <div class="buttons">
-                    <button id="confirm" class="action-button" onclick="confirm()"><span>Exit</span></button>
+                    <button id="confirm" class="action-button" onclick="confirm()"><span>Confirm</span></button>
                     <button id="rotate" class="action-button" onclick="rotate()"><span>Rotate</span></button>
                 </div>
             </div>
