--- a/html/index.html
+++ b/html/index.html
@@ -17,11 +17,13 @@
                     <div class="header-text">Stable</div>
                 </div>
 
-                <div id="button_menu" class="row">
+                <div id="button_menu" class="row main-nav-buttons">
                     <button id="button-myhorses" data-target="page_myhorses" class="menu-selectb active">Stable</button>
                     <button id="button-shop" data-target="page_shop" class="menu-selectb">Trader</button>
                     <button id="button-customization" data-target="page_customization" class="menu-selectb">Tack Shop</button>
                 </div>
+
+                <div class="divider-menu"></div>
 
                 <div id="page_myhorses" class="row">
                     <div class="scroll-container">
