save and cancel menu options

--- a/html/index.html
+++ b/html/index.html
@@ -191,11 +191,11 @@
                 <div class="divider-menu-top"></div>
 
                 <div id="bottom_buttons" class="row main-bottom-buttons">
-                    <button id="save" class="button-select" onclick="save()">Save</button>
+                    <button id="save" class="button-select" onclick="menuAction('save')">Save</button>
                     <button id="rotate_left" class="button-select" onclick="rotate('left')"><i class="fas fa-chevron-left"></i></button>
                     <div id=rotate_label class="rotate-text"><h6 class="grey-text">Rotate</h6></div>
                     <button id="rotate_right" class="button-select" onclick="rotate('right')"><i class="fas fa-chevron-right"></i></button>
-                    <button id="cancel" class="button-select" onclick="cancel()">Cancel</button>
+                    <button id="cancel" class="button-select" onclick="menuAction('cancel')">Cancel</button>
                 </div>
                 
                 <div class="divider-menu-bottom"></div>
