--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
         <div id="creatormenu" style="display: block" class="row">
             <div id="creator-container" class="col s5">
                 <div id="head">
-                    <div class="header-text">Stable</div>
+                    <div id="stable_name" class="header-text">Stable</div>
                 </div>
 
                 <div id="button_menu" class="row main-nav-buttons">
