update comp names

--- a/html/index.html
+++ b/html/index.html
@@ -107,7 +107,7 @@
                                 <div class="col s4 panel-col item-count">
                                     <h6 class="grey-text-count title">0/14</h6>
                                 </div>
-                                <input id="AcsHorn" class="input-number col s4" type="hidden" value="0" readonly min="0" max="14" />
+                                <input id="SaddleHorns" class="input-number col s4" type="hidden" value="0" readonly min="0" max="14" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -125,7 +125,7 @@
                                 <div class="col s4 panel-col item-count">
                                     <h6 class="grey-text-count title">0/20</h6>
                                 </div>
-                                <input id="Bags" class="input-number col s4" type="hidden" value="0" readonly min="0" max="20" />
+                                <input id="SaddleBags" class="input-number col s4" type="hidden" value="0" readonly min="0" max="20" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -143,7 +143,7 @@
                                 <div class="col s4 panel-col item-count">
                                     <h6 class="grey-text-count title">0/30</h6>
                                 </div>
-                                <input id="AcsLuggage" class="input-number col s4" type="hidden" value="0" readonly min="0" max="30" />
+                                <input id="Bedrolls" class="input-number col s4" type="hidden" value="0" readonly min="0" max="30" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
@@ -179,7 +179,7 @@
                                 <div class="col s4 panel-col item-count">
                                     <h6 class="grey-text-count title">0/85</h6>
                                 </div>
-                                <input id="HorseTails" class="input-number col s4" type="hidden" value="0" readonly min="0" max="85" />
+                                <input id="Tails" class="input-number col s4" type="hidden" value="0" readonly min="0" max="85" />
                                 <button class="button-right col s4 btn">
                                     <i class="fas fa-chevron-right"></i>
                                 </button>
