added masks and mustaches

--- a/html/index.html
+++ b/html/index.html
@@ -185,6 +185,42 @@
                                 </button>
                             </div>
                         </div>
+
+                        <div class="col s12 panel-cust">
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Masks</h6>
+                            </div>
+                            <div class="col s6 panel-col">
+                                <button class="button-left col s4 btn">
+                                    <i class="fas fa-chevron-left"></i>
+                                </button>
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/51</h6>
+                                </div>
+                                <input id="Masks" class="input-number col s4" type="hidden" value="0" readonly min="0" max="51" />
+                                <button class="button-right col s4 btn">
+                                    <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="col s12 panel-cust">
+                            <div class="col s6 panel-col item-cust">
+                                <h6 class="grey-text-cust title">Mustaches</h6>
+                            </div>
+                            <div class="col s6 panel-col">
+                                <button class="button-left col s4 btn">
+                                    <i class="fas fa-chevron-left"></i>
+                                </button>
+                                <div class="col s4 panel-col item-count">
+                                    <h6 class="grey-text-count title">0/16</h6>
+                                </div>
+                                <input id="Mustaches" class="input-number col s4" type="hidden" value="0" readonly min="0" max="16" />
+                                <button class="button-right col s4 btn">
+                                    <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>                
                 </div>
 
