--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script
       src="https://kit.fontawesome.com/eb73bbb7e4.js"
       crossorigin="anonymous"
     ></script>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="materialize.min.css" />
-    <script src="materialize.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
