--- a/ui/shim.html
+++ b/ui/shim.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <iframe
-      src="http://localhost:8080"
+      src="http://192.168.45.84:8080"
       style="
         position: absolute;
         top: 0;
