--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,10 +9,8 @@
       href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Roboto&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/6c66a87d74.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
